clang/test/BSC/Negative/Ownership/Borrow/owned_ptr_points_to_borrow_ptr/owned_ptr_points_to_borrow_ptr.cbs
// RUN: %clang_cc1 -verify %s

// Test cases for _Owned pointer pointing to _Borrow pointer (int *_Borrow *_Owned):
// _Borrow checker should reject when the borrowed value does not outlive the owner.

int *_Borrow *_Owned safe_malloc1(int *_Borrow);
void safe_free(void *_Owned);
void ext(int *_Borrow p, int *_Borrow q);

int *_Borrow *_Owned test1(int *_Borrow dummy) {
  int x = 10;
  int *_Borrow bx = &_Mut x; // expected-error {{`x` does not live long enough}}
  int *_Borrow *_Owned bb1 = safe_malloc1(bx);
  return bb1; // expected-note {{`x` dropped here while still borrowed}}
}

int *_Borrow *_Owned test2(int *_Borrow dummy) {
  int x = 10;
  int *_Borrow bx = &_Mut x; // expected-error {{`x` does not live long enough}}
  int *_Borrow *_Owned bb1 = safe_malloc1(bx);
  int *_Borrow *_Owned bb2 = bb1; // ActionAssign: bb2 = bb1
  return bb2; // expected-note {{`x` dropped here while still borrowed}}
}

int *_Borrow *_Owned test3(int *_Borrow dummy) {
  int x = 10;
  int *_Borrow bx1 = &_Mut x;
  int *_Borrow *_Owned bb1 = safe_malloc1(bx1);
  int *_Borrow bx2 = *bb1;
  int *_Borrow *_Owned bb2 = safe_malloc1(bx2);
  safe_free((void *_Owned)bb2);
  safe_free((void *_Owned)bb1);
  return safe_malloc1(dummy);
}

void test4() {
  int x = 10;
  int *_Borrow bx = &_Mut x;
  int *_Borrow *_Owned bb1 = safe_malloc1(bx);
  int y = 0;
  int *_Borrow b2 = &_Mut y;
  *bb1 = &_Mut *b2; // expected-note {{`*b2` is borrowed here}}
                   // expected-note@-1 {{first mut borrow occurs here}}
  ext(*bb1, b2); // expected-error {{cannot use `b2` because it was mutably borrowed}}
                 // expected-error@-1 {{cannot borrow `*b2` as mutable more than once at a time}}
  **bb1 = 2;
  safe_free((void *_Owned)bb1);
}

void test5() {
  int x = 10;
  int *_Borrow bx = &_Mut x;
  int *_Borrow *_Owned bb1 = safe_malloc1(bx);
  int y = 0;
  int *_Borrow b2 = &_Mut y;
  *bb1 = b2; // expected-note {{`*b2` is borrowed here}}
             // expected-note@-1 {{first mut borrow occurs here}}
  ext(*bb1, b2); // expected-error {{cannot use `b2` because it was mutably borrowed}}
                 // expected-error@-1 {{cannot borrow `*b2` as mutable more than once at a time}}
  **bb1 = 2;
  safe_free((void *_Owned)bb1);
}

void test6() {
  int x = 10;
  int *_Borrow bx = &_Mut x;
  int *_Borrow *_Owned bb1 = safe_malloc1(bx);
  int y = 0;
  int *_Borrow b2 = &_Mut y; // expected-note {{first mut borrow occurs here}}
  *bb1 = &_Mut y; // expected-error {{cannot borrow `y` as mutable more than once at a time}}
  ext(*bb1, b2);
  **bb1 = 2;
  safe_free((void *_Owned)bb1);
}

// Test cases for record/struct types containing _Owned ptr to _Borrow ptr:
// same _Borrow rules apply when the pointer is stored in a struct field.

typedef struct {
  int *_Borrow *_Owned ptr;
} S;

S *_Owned safe_malloc2(S);

// FIXME: loans are not collected as expected.
int *_Borrow *_Owned test7(int *_Borrow dummy) {
  int x = 10;
  int *_Borrow bx = &_Mut x; // expected-error {{`x` does not live long enough}}
  S s = { .ptr = safe_malloc1(bx) };
  S *_Owned bb1 = safe_malloc2(s);
  int *_Borrow *_Owned bx2 = bb1->ptr; // ActionAssign: bx2 = (*bb1).ptr
  safe_free((void *_Owned)bb1); // ActionUse: use(bb1)
  return bx2; // expected-note {{`x` dropped here while still borrowed}}
}

typedef struct {
  int *_Borrow p;
} T;

int *_Borrow foo1(T);
int *_Borrow foo2(int, float, T, const char *);

void test8(T s) {
  int *_Borrow p = foo1(s); // expected-note {{`*s.p` is borrowed here}}
  *(s.p) = 2; // expected-error {{cannot assign to `*s.p` because it is borrowed}}
  *p = 3;
}

void test9(T s) {
  int *_Borrow p = foo2(1, 2.0f, s, "hello"); // expected-note {{`*s.p` is borrowed here}}
  *(s.p) = 2; // expected-error {{cannot assign to `*s.p` because it is borrowed}}
  *p = 3;
}
